--- a/Server/package.json
+++ b/Server/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
+    "vercel-build": "tsc",
     "lint": "eslint src --ext .ts",
     "test": "jest"
   },
