--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://notes-sand-five-24.vercel.app
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2FudGVkLWFudGVhdGVyLTI5LmNsZXJrLmFjY291bnRzLmRldiQ
